tests/org.eclipse.php.core.tests/src/org/eclipse/php/core/tests/errors/AbstractErrorReportingTests#tearDown().mjava
	@AfterList
	public void tearDown() throws Exception {
		project.close(null);
		project.delete(true, true, null);
		project = null;
	}

